Blender 2.82 crash at startup (segmentation fault) #72258

Closed
opened 2019-12-07 18:20:09 +01:00 by Amaral Krichman · 6 comments

System Information
Operating system: Ubuntu 19.10
Graphics card: AMD Radeon R7 360

Blender Version
Broken: 2.82 7c2217cd12 , 2019-12-07
Worked: 2.81 until I downloaded 2.81a, now both .81's are broken

Short description of error
Just crashes at startup. If I run it from terminal, the log says

Segmentaiton fault (core dumped)

And both 2.81 and 2.81a crash with

floating point exception (core dumped)

I'm mentioning both 81a and 82 versions because I believe there's something related. I was running 2.81 fine until just now that I downloaded 81a, and now they all crash the same.

I'm attaching the crash log.
blender.crash.txt

Apologies if there's lacking information. Tell me and I'll update accordingly.

**System Information** Operating system: Ubuntu 19.10 Graphics card: AMD Radeon R7 360 **Blender Version** Broken: 2.82 7c2217cd126a , 2019-12-07 Worked: 2.81 until I downloaded 2.81a, now both .81's are broken **Short description of error** Just crashes at startup. If I run it from terminal, the log says ``` Segmentaiton fault (core dumped) ``` And both 2.81 and 2.81a crash with ``` floating point exception (core dumped) ``` I'm mentioning both 81a and 82 versions because I believe there's something related. I was running 2.81 fine until just now that I downloaded 81a, and now they all crash the same. I'm attaching the crash log. [blender.crash.txt](https://archive.blender.org/developer/F8196271/blender.crash.txt) Apologies if there's lacking information. Tell me and I'll update accordingly.

Added subscriber: @karmaral

Added subscriber: @karmaral

Added subscriber: @brecht

Added subscriber: @brecht

Do you have a custom keymap? The crash happens when initializing the key configuration.

Does Blender also crash when you run it with factory settings?

blender --factory-startup

If that avoids the crash, could you attach the contents of /home/<username>/.config/blender/2.81/, so we can try with the same configuration?

Do you have a custom keymap? The crash happens when initializing the key configuration. Does Blender also crash when you run it with factory settings? ``` blender --factory-startup ``` If that avoids the crash, could you attach the contents of `/home/<username>/.config/blender/2.81/`, so we can try with the same configuration?

I do have a custom keymap. It has survived a few version ports from early 2.80, perhaps that has something to do with it.

I tried running factory startup with both .81 and .81a, they crashed the same. 2.82 started up, however.

I'm attaching the contents of both .config/blender/2.81 and /2.82, just in case.
config-2.81.zip config-2.82.zip

I do have a custom keymap. It has survived a few version ports from early 2.80, perhaps that has something to do with it. I tried running factory startup with both .81 and .81a, they crashed the same. 2.82 started up, however. I'm attaching the contents of both .config/blender/2.81 and /2.82, just in case. [config-2.81.zip](https://archive.blender.org/developer/F8199142/config-2.81.zip) [config-2.82.zip](https://archive.blender.org/developer/F8199149/config-2.82.zip)

This issue was referenced by 3a4fa40313

This issue was referenced by 3a4fa4031325d747b857e6918430e3779d699410

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Campbell Barton self-assigned this 2019-12-10 02:02:57 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#72258
No description provided.