Fix T72258: Loading keymap crashes on startup